# action-items

./: .gitignore  ARCHITECTURE.md  Cargo.toml  TODO.md  justfile  rust-toolchain.toml  rustfmt.toml  sgconfig.yml
.cargo/: config.toml
.config/: hakari.toml  nextest.toml
.github/workflows/: quality.yml
data/: org.action-items.policy
docs/: bevy-api-fixes.md  bevy-expertise-summary.md  bevy-global-keystrokes-research.md  global-hotkey-implementation.md  global-keystrokes-bevy-research.md  launcher-implementation-complete.md  macos-framework-integration-patterns.md  macos-permissions-analysis.md  objc2-core-bluetooth-api.md  plugin-discovery-design.md  proposed-plugin-manifest.md  raycast-extension-example.tsx  raycast-integration.md  raycast-plugin-model.md
docs/bevy_cheatsheet/: bevy-cheatbook.github.io_.md  bevy-cheatbook.github.io_builtins.html.md  bevy-cheatbook.github.io_cookbook.html.md  bevy-cheatbook.github.io_cookbook_cursor2world.html.md  bevy-cheatbook.github.io_cookbook_print-framerate.html.md  bevy-cheatbook.github.io_cookbook_smooth-movement.html.md  bevy-cheatbook.github.io_introduction.html.md  bevy-cheatbook.github.io_overview.html.md  bevy-cheatbook.github.io_tutorial.html.md  bevy-cheatbook.github.io_tutorial_guide.html.md
docs/compression-fundamentals/: buffer-pool-analysis.md  compression-library-memory-patterns.md  library-specific-buffer-strategies.md  streaming-zero-allocation-patterns.md  verification-test-plan.md  zero-allocation-research-findings.md
examples/clipboard/: basic_usage.rs  sync_operations.rs
examples/permissions/: all_permissions.rs  basic_usage.rs  camera_permission.rs
forks/surrealdb/: Cargo.toml
plugins/: README.md
plugins/wasm/github-search-plugin/: README.md  package.json  tsconfig.json
spec/markdown/: 01-container-layout-LAUNCHER_UI.md  01-container-layout-system.md  02-gradient-system.md  02-gradients-LAUNCHER_UI.md  03-compact-search-design.md  03-search-LAUNCHER_UI.md  04-realtime-input-system.md  04-window-LAUNCHER_UI.md  05-window-sizing-strategy.md  06-performance-optimization.md  AI_Menu.md  AI_Menu_2.md  AI_Menu_3.md  About_Menu.md  Account_Menu.md  Actions_Items_Config_Menu.md  Actions_Menu.md  Advanced_Menu.md  Advanced_Menu_2.md  Advanced_Menu_4.md  BEVY-FLEX-LAYOUT-CORRECTION.md  Cloud_Sync_Menu.md  General_Menu.md  Global_Hotkey_Config.md  Main_Menu.md  Main_Menu_2.md  Organizations_Menu.md  README-LAUNCHER_UI.md  README.md  VIEWPORT-RELATIVE-SIZING-GUIDE.md
spec/tasks/: MASTER_TASK_BREAKDOWN.md
spec/tasks/AI_Menu/: 0_ai_data_models.md  1_qa_ai_data_models.md  2_privacy_indicators.md  3_qa_privacy_indicators.md  4_quick_ai_interface.md  5_qa_quick_ai.md  6_ai_chat_configuration.md  7_qa_ai_chat.md
spec/tasks/AI_Menu_2/: 0_advanced_ai_data.md  0_ai_commands_data_models.md  1_qa_advanced_ai_data.md  1_qa_ai_commands_data_models.md  2_mcp_server_management.md  2_tools_configuration_system.md  3_qa_mcp_servers.md  3_qa_tools_configuration.md  4_mcp_server_management.md  4_tool_integration.md  5_qa_mcp_server_management.md  5_qa_tool_integration.md  6_api_key_management.md  7_qa_api_key_management.md  7_qa_api_keys.md
spec/tasks/AI_Menu_3/: 0_local_ai_models.md  0_ollama_host_config.md  1_qa_local_ai_models.md  (+17 more)
task/: ECSUI_10.md  ECSUI_9.md  HOTKEY_4_WINDOWS_LINUX.md  ICON_2.md  ICON_4.md  ICON_6.md  ICON_7.md  ICON_8.md  TASK7-SETTINGS_MENUS.md  TASK7.1-GENERAL.md  TASK7.3-AI.md  TASK7.4-CLOUD-SYNC.md  TASK7.5-ACCOUNT.md  TASK7.6-ORGANIZATIONS.md  TASK7.7-ADVANCED.md  TASK7.C-COMPONENTS.md  TASK8-INTEGRATION.md
(+213 files in other folders)
